# customer-chatbot-demo-agent-rag-langchain

./: .gitignore  00_indexing.ipynb  01_retrieval.ipynb  02_agent.ipynb  README.md  main.py  pyproject.toml
docs/: coffee_bean_menu.csv  menu_price.csv
